refactor(forecast): ♻️ Usar Math.clamp e melhorar cobertura de testes
- Substituir Math.max/min por Math.clamp (Java 21)
- Adicionar testes para savings com amount/interestRate nulos
- Adicionar teste para histórico apenas com savingsDeposit
- Corrigir formatação de código